<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:context="com.example.nanni.examapp.activities.LoginActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/login_logo"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_10"
        android:text="@string/LOGIN"/>
    <EditText
        android:id="@+id/et_userName"
        android:hint="@string/user_name"
        android:layout_width="match_parent"
        android:drawableLeft="@drawable/login_username_ic"
        android:drawablePadding="@dimen/dp_10"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/et_Password"
        android:hint="@string/password"
        android:drawableLeft="@drawable/login_password_ic"
        android:drawablePadding="@dimen/dp_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/cb_rememberMe"
            android:layout_width="wrap_content"
            android:text="@string/remember_me"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/forgot_pssword"/>
    </LinearLayout>
<Button
    android:id="@+id/bt_Login"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textAllCaps="false"
    android:text="@string/login"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal">
        <view
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_2"
            android:layout_weight="1"
        android:layout_gravity="center"/>
    <TextView
        android:layout_gravity="center"
        android:layout_width="0dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:text="@string/or"/>
        <view
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_2"
            android:layout_weight="1"
            android:layout_gravity="center"/>
    </LinearLayout>
    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_30"
        android:text="@string/login_with"/>
</LinearLayout>
    <LinearLayout
        android:id="@+id/bt_signUP"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:textAllCaps="false"
        android:background="@android:color/darker_gray"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal" >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="@dimen/dp_10"
        android:text="@string/dont_have_account_yet"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp_2"
            android:text="@string/sign_up_question"/>
    </LinearLayout>

</RelativeLayout>
